[package]
description = "sdag rust implmentation"
name = "sdag"
version = "0.2.0"
authors = ["SDAG TEAM"]
license = "MIT"

[dependencies]
sdag_wallet_base = { path = "wallet_base" }
sdag_object_base = { path = "object_base" }

may = "0.3"
log = "0.4"
url = "1.7"
rand = "0.6"
chrono = "0.4"
failure = "0.1"
indexmap = "1"
rcu_cell = "0.1"
smallvec = "0.6"
crossbeam = "0.6"
hashbrown = "0.1"
may_waiter = "0.1"
lazy_static = "1"
tungstenite = "0.6"

serde = "1"
serde_json = "1"
serde_derive = "1"

sha2 = "0.8"
base64 = "0.10"
secp256k1 = "0.11"

sled = {version = "0.18", optional = true}
rocksdb = {version = "0.11", optional = true}

[profile.release]
lto = true
# codegen-units = 1
# panic = "abort"

[features]
default = ["kv_store_none"]
kv_store_none = []
kv_store_sled = ["sled"]
kv_store_rocksdb = ["rocksdb"]

[workspace]
members = [
    "hub",
    "wallet_base",
    "sdg",
    "witness",
    "test_case",
    "object_base",
]
