[package]
description = "sdag hub beta rust implmentation"
name = "sdag_hub"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"

[dependencies]
sdag = { path = ".."}

may = "0.3"
log = "0.4"
fern = "0.5"
chrono = "0.4"
num_cpus = "1"
serde_json = "1"
may_signal = {git = "https://github.com/Xudong-Huang/may_signal.git"}
