[package]
description = "sdag hub rust implmentation"
name = "sdag_hub"
version = "0.1.0"
authors = ["SDAG TEAM"]
license = "MIT"

[dependencies]
sdag = { path = "..", default-features = false}

may = "0.3"
log = "0.4"
chrono = "0.4"
num_cpus = "1"
serde_json = "1"
env_logger = "0.6"
may_signal = {git = "https://github.com/Xudong-Huang/may_signal.git"}

[features]
default = ["kv_store_none"]
kv_store_none = ["sdag/kv_store_none"]
kv_store_sled = ["sdag/kv_store_sled"]
