[package]
name = "test_case"
version = "0.1.0"
authors = ["_jiang <jiang762507357@163.com>"]
edition = "2018"



[dependencies]
sdag = { path = ".."}
sdag_wallet_base = { path = "../wallet_base" }
clap = {version = "2", features = ["yaml"]}

may = "0.3"
log = "0.4"
rand = "0.6"
chrono = "0.4"
failure = "0.1"
env_logger = "0.6"
lazy_static = "1"

serde = "1"
serde_json = "1"
serde_derive = "1"
