[package]
name = "web_server"
version = "0.1.0"
authors = ["_jiang <jiang762507357@163.com>"]
edition = "2018"

[dependencies]
sdag = { path = ".."}

lazy_static = "1.3.0"
failure = "0.1"

may_minihttp = {git = "https://github.com/Xudong-Huang/may_minihttp.git"}

serde = "1"
serde_json = "1"
serde_derive = "1"